fix text align

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ p a:hover{
 
   strong {
     font-size: 3rem;
-    line-height: 1;
+    line-height: 1.1;
     max-width: 23rem;
     /* border: 1px solid salmon; */
   }
